--- a/env.example
+++ b/env.example
@@ -1,9 +1,7 @@
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/impact_insights"
 
-# Next.js
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-secret-key-here"
+# Next.js (no auth env needed unless using NextAuth)
 
 # Email (optional)
 SMTP_HOST=""
