--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "eslint-config-next": "14.0.4",
     "typescript": "^5",
     "tsx": "^4.6.2"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
